
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int IPC_CREAT ;
 int curr_key ;
 int errno ;
 int printf (char*,int) ;
 int semget (int ,int,int) ;

int alloc_sem(size_t factor) {
 int semid;
   int nsems = factor;

   semid = semget(curr_key++, nsems, IPC_CREAT | 0666);
   if(semid == -1) {
    printf("[*err*]semget failed, errno == 0x%x\n", errno);
    return -1;
   }

 return semid;
}
